fix spacing errors

--- a/StaticFile/stylesheets/style.css
+++ b/StaticFile/stylesheets/style.css
@@ -560,11 +560,6 @@ a {
     border-radius: 5;
 }
 
-.response-answer {
-    font-weight: normal; 
-}
-
-
 /*======================== Sidebar CSS ========================*/
 .sidebar-left, .sidebar-right {
     display: flex;
